inserção das imagens

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Slider</title>
 </head>
 <body>
-    
+    <div class="containerImg">
+        <img src="img/img1.png">
+        <img src="img/img2.png">
+        <img src="img/img3.png">
+        <img src="img/img4.png">
+        <img src="img/img5.png">
+    </div>
 </body>
 </html>
