--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <div class="containerImg">
+        <button class="btnsControler voltar">&#9668;</button>
+        <button class="btnsControler avancar">&#9658;</button>
         <img src="img/img1.png">
         <img src="img/img2.png">
         <img src="img/img3.png">
         <img src="img/img4.png">
         <img src="img/img5.png">
+        <div class="containerMiniatura">sdafsdfsadf</div>
     </div>
 </body>
 </html>
