--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="img/img3.png">
         <img src="img/img4.png">
         <img src="img/img5.png">
-        <div class="containerMiniatura">sdafsdfsadf</div>
+        <div id="containerMiniatura"></div>
     </div>
 </body>
 </html>
