--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <img src="img/img4.png">
         <img src="img/img5.png">
         <img src="img/img6.png">      
+        <img src="img/img7.png">      
+        <img src="img/img8.png">      
     </div>
 </body>
 </html>
