--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Slider</title>
+    <script>
+        
+    </script>
 </head>
 <body>
     <div class="containerImg">
-        <img src="img/img1.png">
-        <img src="img/img2.png">
-        <img src="img/img3.png">
-        <img src="img/img4.png">
+        <img src="img/img1.png" data-url="http://www.google.com" data-linkMode="_blank">
+        <img src="img/img2.png" data-url="http://www.youtube.com" data-linkMode="_blank">
+        <img src="img/img3.png" data-url="http://www.github.com" data-linkMode="_blank">
+        <img src="img/img4.png" data-url="http://www.linkedin.com" data-linkMode="_blank">
         <img src="img/img5.png">
         <img src="img/img6.png">      
         <img src="img/img7.png">      
-        <img src="img/img8.png">      
+        <img src="img/img8.png">     
     </div>
 </body>
 </html>
